--- a/src/components/sidebar/sidebar.module.scss
+++ b/src/components/sidebar/sidebar.module.scss
@@ -13,7 +13,7 @@
     display: flex;
     align-items: center;
     gap: 12px;
-    padding: 24px 24px 32px;
+    padding: 14px 24px 21px;
     border-bottom: 1px solid #f0f0f0;
     margin-bottom: 16px;
 }
@@ -31,7 +31,7 @@
 
 .settings {
     display: flex;
-    margin-bottom: 24px;
+    margin-block: 15px;
     gap: 12px;
     align-items: center;
     justify-content: center;
