feat: create signup page

--- a/src/pages/auth/auth.module.scss
+++ b/src/pages/auth/auth.module.scss
@@ -80,13 +80,13 @@
 
 .toggleBtn {
     position: absolute;
-    bottom: 1.5rem;
+    // bottom: 1.5rem;
     left: 50%;
     transform: translateX(-50%);
     padding: 0.6rem 1.4rem;
     border: none;
-    background: #29a6d7;
-    color: #fff;
+    // background: #29a6d7;
+    // color: #fff;
     border-radius: 6px;
     cursor: pointer;
     font-size: 1rem;
