feat: implements login

--- a/src/pages/signin/signin.module.scss
+++ b/src/pages/signin/signin.module.scss
@@ -1,5 +1,11 @@
+.container {
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
 .card {
-    grid-area: main;
     width: 100%;
     max-width: 380px;
     justify-self: center;
