--- a/src/pages/signup/signup.module.scss
+++ b/src/pages/signup/signup.module.scss
@@ -1,7 +1,11 @@
+.container {
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
 .card {
-    grid-area: main;
-    width: 100%;
-    // max-width: 380px;
     justify-self: center;
     align-self: center;
     padding: 24px;
