--- a/src/app/(landing)/landing.module.scss
+++ b/src/app/(landing)/landing.module.scss
@@ -1,18 +1,21 @@
 .container {
-    display: flex;
-    justify-content: flex-start;
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-template-rows: auto 1fr auto;
     align-items: center;
-    flex-direction: column;
     background: linear-gradient(135deg, #667eea 0%, #081550 100%);
     color: white;
+    min-height: 100vh;
 }
 
 .body {
     position: relative;
     padding: 8px;
     width: 100%;
+    height: 100%;
 }
 
 .internal-page {
     margin: 0 auto;
+    height: 100%;
 }
