--- a/src/app/internal/financial/budget/budget.module.scss
+++ b/src/app/internal/financial/budget/budget.module.scss
@@ -4,11 +4,20 @@
 
 .header_command {
     margin: 2px 16px;
+}
+
+.container {
+    padding: 16px;
     display: flex;
-    align-items: center;
-    justify-content: space-between;
+    flex-wrap: wrap;
+    gap: 16px;
 }
 
 .title {
     margin: 8px;
+}
+
+.sub-title {
+    margin: 8px 16px;
+    color: #aaaaaa;
 }
