--- a/src/components/dashboard/BudgetProgress/BudgetProgress.module.scss
+++ b/src/components/dashboard/BudgetProgress/BudgetProgress.module.scss
@@ -199,6 +199,7 @@
     border-radius: 12px;
     box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
     border: none;
+    height: 419px;
 }
 
 .summaryItem {
@@ -220,6 +221,7 @@
 }
 
 .summaryValue {
+    width: 50%;
     font-size: 16px;
     font-weight: 600;
 
