--- a/src/components/csvImport/steps/steps.module.scss
+++ b/src/components/csvImport/steps/steps.module.scss
@@ -102,3 +102,10 @@
         background: rgba(255, 214, 102, 0.12);
     }
 }
+
+.confirm-card-select-tag {
+}
+
+.close-icon-tag {
+    color: unset !important;
+}
