--- a/src/app/(landing)/landing.module.scss
+++ b/src/app/(landing)/landing.module.scss
@@ -19,3 +19,9 @@
     margin: 0 auto;
     height: 100%;
 }
+
+.footer {
+    text-align: center;
+    padding: 16px;
+    color: rgba(255, 255, 255, 0.85);
+}
